<resources>
    <string name="app_name">ReservationApp</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="books">Books</string>
    <string name="approval">Approval</string>
    <string name="contact">Contact</string>
    <string name="contact_us">Contact Us</string>
    <string name="address">Jamal Town Kot Abdul Malik Lahore, Pakistan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>    