<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/page_1"
            android:icon="@drawable/home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/page_4"
            android:icon="@drawable/approval"
            android:title="@string/approval"/>
        <item
            android:id="@+id/page_3"
            android:icon="@drawable/offers"
            android:title="@string/books"/>
        <item
            android:id="@+id/page_5"
            android:icon="@drawable/contact"
            android:title="@string/contact"/>
        <item
            android:id="@+id/page_2"
            android:icon="@drawable/about"
            android:title="@string/about"/>
</menu>